primera clase php

--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,56 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+*{
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 
-.box_crearprodc{
-    padding: 60px 15px;
-    background-color:  #fdfefe;
-    border-radius: 14px;  
-    text-align: center;
-    box-shadow: red;
+body{
+    background: white;
+}
+#contenedor{
+    width: 40%;
+    background: #ffffff;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 12px;
+    -moz-border-radius: 12px;
+    -o-border-radius: 12px;
+    -webkit-border-radius: 12px;
+}
+#box-crearprod{
+    width: 90%;
+    height: 400%;
+    border-radius: 12px;
+    -moz-border-radius: 12px;
+    -o-border-radius: 12px;
+    -webkit-border-radius: 12px;
+}
+#box-formulario{
+    width: 100%;
+    padding: 5px;
+    margin-bottom:  5px;
+    border-bottom: 1px solid silver;
+    font-weight: bold;
+    font-family: 'Mukta Vaani', sans-serif;
+}
+input[type='text']{
+    width: 100%;
+    height: 40px;
+    border: 1px solido gray;
+    border-radius: 12px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+input[type='submit']{
+    width: 100%;
+    height: 40px;
+    border: 1px solido gray;
+    border-radius: 12px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    cursor: pointer;
+    background-color: aqua;
 }
