--- a/estilos.css
+++ b/estilos.css
@@ -9,27 +9,32 @@ body{
 }
 #contenedor{
     width: 40%;
-    background: #ffffff;
+    background: white;
     margin: 0 auto;
     padding: 20px;
     border-radius: 12px;
     -moz-border-radius: 12px;
     -o-border-radius: 12px;
     -webkit-border-radius: 12px;
+    
 }
-#box-crearprod{
+#box_crearprod{
+    padding-bottom: 3px;
     width: 90%;
     height: 400%;
     border-radius: 12px;
     -moz-border-radius: 12px;
     -o-border-radius: 12px;
     -webkit-border-radius: 12px;
+    border-top: 1px solid silver;
+    border-left: 1px solid silver;
+    border-right: 1px solid silver;
+    border-bottom: 1px solid silver;
 }
-#box-formulario{
+#box_formulario{
     width: 100%;
     padding: 5px;
     margin-bottom:  5px;
-    border-bottom: 1px solid silver;
     font-weight: bold;
     font-family: 'Mukta Vaani', sans-serif;
 }
@@ -41,13 +46,14 @@ input[type='text']{
     -moz-border-radius: 5px;
     -o-border-radius: 5px;
     -webkit-border-radius: 5px;
+    background-color: lightgrey;
 }
 
 input[type='submit']{
     width: 100%;
     height: 40px;
     border: 1px solido gray;
-    border-radius: 12px;
+    border-radius: 5px;
     -moz-border-radius: 5px;
     -o-border-radius: 5px;
     -webkit-border-radius: 5px;
